# vfs.afp

./: CMakeLists.txt
depends/common/afpfs-ng/: CMakeLists.txt
src/: AFPConnection.cpp  AFPConnection.h  AFPFile.cpp
vfs.afp/: addon.xml
